muevo index a raiz

--- a/html/checkout-pago.html
+++ b/html/checkout-pago.html
@@ -11,7 +11,7 @@
  <header class="header">
   <div class="header__logo">
     <svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 4h18v12H3z"/></svg>
-    <a href="index.html">Script-G</a>
+    <a href="../index.html">Script-G</a>
   </div>
   <div class="header__right">
     <a
@@ -147,7 +147,3 @@
   <script type="module" src="../scriptsFolder/checkout-pago.js"></script>
 </body>
 </html>
-
-
-
-
