--- a/html/confirmacion.html
+++ b/html/confirmacion.html
@@ -103,7 +103,7 @@
     </div>
 
     <div class="card__footer actions">
-      <a href="./" class="btn">Seguir comprando</a>
+      <a href="../index.html" class="btn">Seguir comprando</a>
       <a href="./pedidos.html" class="btn btn--primary">Ver mis pedidos</a>
     </div>
   </section>
