--- a/html/productos.html
+++ b/html/productos.html
@@ -61,7 +61,7 @@
 
 <body>
     <header class="main-header">
-        <a href="index.html" class="header-logo-title">
+        <a href="../index.html" class="header-logo-title">
             <div class="logo">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M3 4h18a1 1 0 0 1 1 1v11a1 1 0 0 1-1 1h-7v2h3v2H8v-2h3v-2H3a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1Zm1 2v9h16V6H4Z" />
@@ -85,7 +85,7 @@
         <div class="menu" id="mobileMenu">
             <nav>
                 <ul class="main-nav-list">
-                    <li><a href="../html/index.html" class="menu-btn"><i class="fa-solid fa-house"></i> Inicio</a></li>
+                    <li><a href="../index.html" class="menu-btn"><i class="fa-solid fa-house"></i> Inicio</a></li>
                     <li><a href="../html/productos.html" class="menu-btn"><i class="fa-solid fa-box"></i> Productos</a></li>
                     <li>
                         <button class="menu-btn" id="btn-login" type="button">
@@ -258,7 +258,7 @@
 
     <footer>
         <div class="Footer_Container">
-            <a href="index.html" class="Logo_Pagina">
+            <a href="../index.html" class="Logo_Pagina">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M3 4h18a1 1 0 0 1 1 1v11a1 1 0 0 1-1 1h-7v2h3v2H8v-2h3v-2H3a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1Zm1 2v9h16V6H4Z" />
                 </svg>
