--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                     </div>
                 </div>
                 <div class="carousel-slide">
-                    <img src="imgs/carrusel2.jpg" alt="Ofertas Especiales">
+                    <img src="https://cdn.pixabay.com/photo/2020/06/07/00/07/computer-5268574_960_720.jpg" alt="Ofertas Especiales">
                     <div class="carousel-caption">
                         <button class="menu-btn">Ver Más</button>
                         <h2>Ofertas Especiales</h2>
