--- a/html/productos.html
+++ b/html/productos.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Script-G</title>
-    <link rel="icon" href="../imgs/favicon.svg?v=1" type="image/svg+xml" sizes="any">
+    <link rel="icon" href="/imgs/favicon.svg?v=1" type="image/svg+xml" sizes="any">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/productosStyle.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/productosStyle.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- SweetAlert2 global -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href ="../css/chatbot.css">
-    <script type="module" src="../scriptsFolder/productos.js"></script>
+    <link rel="stylesheet" href ="/css/chatbot.css">
+    <script type="module" src="/scriptsFolder/productos.js"></script>
     
-    <script type="module" src="../scriptsFolder/modalHandler.js"></script>
-    <script type="module" src="../scriptsFolder/funciones.js"></script>
+    <script type="module" src="/scriptsFolder/modalHandler.js"></script>
+    <script type="module" src="/scriptsFolder/funciones.js"></script>
 
 </head>
 
@@ -61,7 +61,7 @@
 
 <body>
     <header class="main-header">
-        <a href="../index.html" class="header-logo-title">
+        <a href="/index.html" class="header-logo-title">
             <div class="logo">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M3 4h18a1 1 0 0 1 1 1v11a1 1 0 0 1-1 1h-7v2h3v2H8v-2h3v-2H3a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1Zm1 2v9h16V6H4Z" />
@@ -85,8 +85,8 @@
         <div class="menu" id="mobileMenu">
             <nav>
                 <ul class="main-nav-list">
-                    <li><a href="../index.html" class="menu-btn"><i class="fa-solid fa-house"></i> Inicio</a></li>
-                    <li><a href="../html/productos.html" class="menu-btn"><i class="fa-solid fa-box"></i> Productos</a></li>
+                    <li><a href="/index.html" class="menu-btn"><i class="fa-solid fa-house"></i> Inicio</a></li>
+                    <li><a href="/html/productos.html" class="menu-btn"><i class="fa-solid fa-box"></i> Productos</a></li>
                     <li>
                         <button class="menu-btn" id="btn-login" type="button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" fill="currentColor"
@@ -258,7 +258,7 @@
 
     <footer>
         <div class="Footer_Container">
-            <a href="../index.html" class="Logo_Pagina">
+            <a href="/index.html" class="Logo_Pagina">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M3 4h18a1 1 0 0 1 1 1v11a1 1 0 0 1-1 1h-7v2h3v2H8v-2h3v-2H3a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1Zm1 2v9h16V6H4Z" />
                 </svg>
@@ -280,13 +280,13 @@
             <h2><a href="Terminos_condiciones">Terminos y Condiciones</a></h2>
         </div>
     </footer>
-    <script type='module' src='../scriptsFolder/auth.js'></script>
+    <script type='module' src='/scriptsFolder/auth.js'></script>
     <script type="module">
-  import { obtenerProductos } from '../scriptsFolder/api/api_productos.js';
-  import { agregarFavorito } from '../scriptsFolder/api/api_favoritos.js';
-  import { agregarAlCarrito, renderizarCarrito, toggleCart, updateCartCount } from '../scriptsFolder/funciones.js';
-  import { toggleLoginModal } from '../scriptsFolder/modalHandler.js';
-  import { renderizarEstrellas, obtenerPromedioEstrellas } from '../scriptsFolder/estrellas.js'; // ← IMPORTAR
+  import { obtenerProductos } from '/scriptsFolder/api/api_productos.js';
+  import { agregarFavorito } from '/scriptsFolder/api/api_favoritos.js';
+  import { agregarAlCarrito, renderizarCarrito, toggleCart, updateCartCount } from '/scriptsFolder/funciones.js';
+  import { toggleLoginModal } from '/scriptsFolder/modalHandler.js';
+  import { renderizarEstrellas, obtenerPromedioEstrellas } from '/scriptsFolder/estrellas.js'; // ← IMPORTAR
 
   const PLACEHOLDER_IMG = 'data:image/svg+xml,%3Csvg xmlns=%22http%3A//www.w3.org/2000/svg%22 width=%22200%22 height=%22200%22 viewBox=%220 0 200 200%22%3E%3Crect width=%22200%22 height=%22200%22 fill=%22%23f2f4f8%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22Inter%2CArial%2Csans-serif%22 font-size=%2214%22 fill=%22%23666%22%3ESin%20imagen%3C/text%3E%3C/svg%3E';
   document.addEventListener('DOMContentLoaded', async () => {
@@ -373,7 +373,7 @@
           <div class="actions">
             <button class="btn-cart" data-product-id="${p.id}">Agregar al Carrito</button>
             <button class="btn-favorite" type="button" data-product-id="${p.id}">Agregar a Favoritos</button>
-            <a class="btn-details" href="../html/detallecompra.html?id=${p.id}" target="_blank" rel="noopener noreferrer">Ver Detalles</a>
+            <a class="btn-details" href="/html/detallecompra.html?id=${p.id}" target="_blank" rel="noopener noreferrer">Ver Detalles</a>
           </div>
         </div>
       `;
@@ -514,7 +514,7 @@
   </div>
 </div>
 <div id="toast-container"></div>
-<script src="../scriptsFolder/chatbot.js"></script>
+<script src="/scriptsFolder/chatbot.js"></script>
 <script>
   // Filtros por múltiples categorías con checkboxes + ordenamiento por precio
   document.addEventListener('DOMContentLoaded', () => {
