--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
         </div>
     </div>
     <div id="toast-container"></div>
-    <script src="scriptsFolder/chatbot.js"></script>
+    <script type="module" src="scriptsFolder/chatbot.js"></script>
 
     <!-- Correcciones de texto visibles (fallbacks y acentos) -->
     <script>
